# typeStructure

./: CMakeLists.txt  Makefile  c  c.cpp  gdb.py  gen_pybind.py  structs.json
inc/: c.hpp
src/: bind.cpp
